<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.5"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="80dp"
            android:text="@string/distance_first_line"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/distance_second_line"
            android:textSize="18sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="40dp"
            android:text="@string/distance_third_line"
            android:textSize="18sp" />

        <org.adw.library.widgets.discreteseekbar.DiscreteSeekBar
            android:id="@+id/bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="20dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingTop="20dp"
            app:dsb_indicatorColor="#80CBC4"
            app:dsb_max="50"
            app:dsb_min="2"
            app:dsb_rippleColor="#80CBC4"
            app:dsb_trackColor="#80CBC4"
            app:dsb_indicatorFormatter="%dm"/>


    </LinearLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:src="@drawable/g_divider_h" />

    <LinearLayout
        android:id="@+id/alarm_layout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.5"
        android:background="#EEEEEE"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_weight="0.2"
            android:gravity="center"
            android:text="@string/distance_current"
            android:textSize="18sp">

        </TextView>

        <TextView
            android:id="@+id/current_distance"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_weight="0.6"
            android:gravity="center"
            android:text="1 m"
            android:textSize="50sp"></TextView>

        <TextView
            android:id="@+id/identificator"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_weight="0.2"
            android:gravity="center"
            android:text="@string/distance_current_uuid">

        </TextView>

    </LinearLayout>

</LinearLayout>